--- a/app/src/main/res/layout/activity_regn_form.xml
+++ b/app/src/main/res/layout/activity_regn_form.xml
@@ -11,10 +11,67 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="50dp"
         android:textSize="20sp"
         android:textColor="@color/black"
         android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        android:text="Welcome to our Application \n Survey on lifestyle" />
 
-        android:text="Welcome to our Application" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+
+        <EditText
+            android:id="@+id/editTextTextPersonName3"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginStart="20dp"
+            android:inputType="textPersonName"
+            android:text="First Name" />
+
+        <EditText
+            android:id="@+id/editTextTextPersonName4"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginStart="20dp"
+            android:inputType="textPersonName"
+            android:text="Last Name" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/editTextNumber3"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginStart="20dp"
+            android:inputType="number"
+            android:text="Age" />
+
+<!--        <EditText-->
+<!--            android:id="@+id/editTextTextPersonName6"-->
+<!--            android:layout_width="170dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:ems="10"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:inputType="textPersonName"-->
+<!--            android:text="" />-->
+
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
+
+
 </LinearLayout>
