--- a/app/src/main/res/layout/activity_radio_button.xml
+++ b/app/src/main/res/layout/activity_radio_button.xml
@@ -94,7 +94,8 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="20sp"
+        android:layout_marginRight="20sp"
         android:layout_marginTop="50dp" />
 
 
