--- a/app/src/main/res/layout/activity_custom_alert_dialogue.xml
+++ b/app/src/main/res/layout/activity_custom_alert_dialogue.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="SIMPLE ALERT DIALOG"/>
 
-    <Button android:id="@+id/btnAlertWithItems"
+    <Button android:id="@+id/btnAlertWithItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="WITH ITEMS"/>
